<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <ImageView
        android:id="@+id/img_nearby"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/place_thumb_empty"
         />

    <RelativeLayout
        android:id="@+id/rl_txt_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_nearby"
        android:layout_alignTop="@+id/img_nearby"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_toRightOf="@+id/img_nearby" >

        <TextView
            android:id="@+id/txt_nearby_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_places_name"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_nearby_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_nearby_name"
            android:text="@string/sample_places_category"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_nearby_dist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/sample_places_distance"
            android:textSize="12sp"
            android:textStyle="italic" />
        
    </RelativeLayout>

    <ImageView
        android:id="@+id/pager_place_photos"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/muis_logo" />

</RelativeLayout>